Use Arrays.asList in Help.java
Add java.util.Arrays import and replace List.of(...) with Arrays.asList(...) in Help.java. This change ensures compatibility with environments where List.of may be unavailable and produces a conventional list implementation. Compiled Help.class was added and MessageListener.class was updated.